# live-drops-server

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cleanup.yml
app/: main.py
app/api/: admin.py  auctions.py  bids.py  websockets.py
app/core/: cache.py  config.py  database.py  supertokens.py  websocket.py
app/models/: __init__.py  auction.py  base.py  bid.py  user.py
app/schemas/: auction.py  bid.py
app/services/: bidding_service.py
app/tasks/: countdown.py
migrations/: env.py
migrations/versions/: 333f8eacbaeb_create_users_auctions_bids_tables.py  b28229e9e708_add_created_at_to_users.py
tests/: conftest.py  test_api.py  test_bidding.py
tests/api/: test_admin.py
tests/core/: test_cache.py
tests/services/: test_bidding_service.py
